k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-frontend-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: books-frontend
