k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: books-frontend-ingress
spec:
  rules:
  - host: books.areyt.net
    http:
      paths:
      - path: /
        backend:
          serviceName: books-frontend-svc
          servicePort: 80
